k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app
  labels:
    app: app
spec:
  hosts:
  - app.example.com
  http:
  - name: primary
    route:
    - destination:
        host: app
        subset: stable
      weight: 100
    - destination:
        host: app
        subset: canary
      weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: app
  labels:
    app: app
spec:
  host: app
  subsets:
  - name: stable
    labels:
      app: app
      version: stable
  - name: canary
    labels:
      app: app
      version: canary
